<resources>
    <string name="app_name">Alameera</string>
    <string name="title_home">Home</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_products">Products</string>
    <string name="title_services">Services</string>
    <string name="title_loyalty_card">Loyalty</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_activity_social_activty">SocialActivty</string>

    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
