<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_bookings"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_bookings"/>

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_services" />

    <item
        android:id="@+id/navigation_loyalty_card"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_loyalty_card" />


</menu>
